syntax = "proto3";

package applet.v2;
option go_package = "applet-server/api/v2/applet";


import "google/api/annotations.proto";
import "validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "options/gorm.proto";
import "google/protobuf/empty.proto";


service  Account {
  rpc login(LoginReq) returns (LoginResp) {
    option (google.api.http) = {
      get: "/api/v2/login"
    };
  };
}

message  LoginReq{
  string fullName = 1 [(validate.rules).string.min_len = 1];
  string phoneNumber = 2 [(validate.rules).string.min_len = 1];
  string openId  = 3;
}

message LoginResp{
    string token = 1;
}

